<resources>
    <string name="app_name">StepsSound</string>
    <string name="goal">goal</string>
    <string name="playlist">playlist</string>
    <string name="sensor">sensor</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="step">Step</string>
    <string name="startTime">00:00</string>
    <string name="shoes_for_steps_counter">shoes for steps counter</string>
    <string name="good_job">good job</string>
    <string name="bad_job">bad job</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="home">home</string>
    <string name="_0">0</string>
    <string name="reload">Reload…</string>
    <string name="Riscaldamento">Riscaldamento</string>
    <string name="error">Errore!</string>
    <string name="maxValueAccelerometer">maxValueAccelerometer</string>
    <string name="minValueAccelerometer">minValueAccelerometer</string>
    <string name="satisfiesPoints">satisfiesPoints</string>
    <string name="stepCounter">stepCounter</string>
    <string name="durationSession">durationSession</string>
    <string name="timestamp">timestamp</string>
    <string name="max_accelerometer_value">Max Accelerometer Value:</string>
    <string name="min_accelerometer_value">Min Accelerometer Value:</string>
    <string name="time_of_session">Time of Session:</string>
    <string name="steps">Steps:</string>
    <string name="date">Date:</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="save_successful">Salvataggio avvenuto con successo</string>
    <string name="summary">Summary</string>
    <string name="better_result">Better Result</string>
    <string name="bad_result">Bad Result</string>
    <string name="step_column">nSteps</string>
    <string name="time_duration_column">timeDurationSession</string>
    <string name="non_ci_sono_dati_di_sessioni_sportive_concluse">Non ci sono dati di sessioni sportive concluse.</string>
    <string name="lastIndex">lastIndex</string>
    <string name="currentPosition">currentPosition</string>
    <string name="mediaUri">mediaUri</string>
    <string name="baseChronometer">baseChronometer</string>
    <string name="lastValueAcc">lastValueAcc</string>
    <string name="nValueAcc">nValueAcc</string>
</resources>