<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/max_acc_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/better_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/max_acc_item"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/max_acc_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/reload"
        app:layout_constraintStart_toEndOf="@id/max_acc_item_label"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/min_acc_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/bad_result"
        app:layout_constraintStart_toStartOf="@id/max_acc_item_label"
        app:layout_constraintEnd_toEndOf="@id/max_acc_item_label"
        app:layout_constraintTop_toBottomOf="@id/max_acc_item_label"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/min_acc_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/reload"
        app:layout_constraintStart_toStartOf="@id/max_acc_item"
        app:layout_constraintTop_toBottomOf="@id/max_acc_item"
        app:layout_constraintEnd_toEndOf="@id/max_acc_item"
        android:layout_marginTop="10dp"

        />
    <TextView
        android:id="@+id/time_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/startTime"
        android:layout_marginEnd="10sp"
        />
    <ImageView
        android:id="@+id/image_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/time_session"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_timer_24"
        android:layout_marginEnd="10dp"/>
    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_session"
        app:layout_constraintStart_toStartOf="@id/time_session"
        android:text="@string/_0"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/image_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/image_time"
        app:layout_constraintTop_toBottomOf="@id/image_time"
        app:layout_constraintStart_toStartOf="@id/image_time"
        android:src="@drawable/ic_shoes"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_acc_item_label"
        app:layout_constraintStart_toEndOf="@id/image_date"
        android:text="@string/reload"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/min_acc_item_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_calendar_today_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>