<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".running.RunningActivity"
    android:background="@color/black">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sensor_watcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/animation_heart"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/image_accelerometer_plus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@id/image_step"
            android:src="@drawable/ic_baseline_sentiment_satisfied_alt_24"
            app:layout_constraintStart_toStartOf="@id/image_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/image_step"
            android:contentDescription="@string/good_job"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/user_accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/user_step"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_accelerometer_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:text="@string/_0"
            />
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/image_step"
            />
        <ImageView
            android:id="@+id/image_step"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toBottomOf="@id/chronometer"
            android:src="@drawable/ic_shoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/image_accelerometer_plus"
            android:contentDescription="@string/shoes_for_steps_counter"
            android:layout_margin="10dp" />
        <TextView
            android:id="@+id/user_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/chronometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_step"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/user_accelerometer"
            android:text="@string/_0"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/info_music_reproduce"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_heart"
        app:layout_constraintBottom_toTopOf="@id/linear_button_session"
        android:layout_margin="10dp"
        android:text="@string/reload"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_heart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/sensor_watcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/info_music_reproduce"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_fileName="heart.json"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_button_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_music_reproduce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp">
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/pause_session"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_baseline_pause_circle_filled_24"
            android:visibility="visible"
            />

        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/resume_session"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/end_session"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_baseline_cancel_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>