<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MediaPlayer.ListTracesActivity">

    <TextView
        android:id="@+id/text_lis_trace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="List traces"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/scrollable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/text_lis_trace"
        app:layout_constraintBottom_toTopOf="@id/info_trace_pick"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_music_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_1"
        app:layout_constraintTop_toBottomOf="@id/info_trace_pick">
        <ImageView
            android:id="@+id/prec_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_fast_rewind_24"
            />
        <ImageView
            android:id="@+id/play_button_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_play_circle_filled_24"
            android:visibility="visible"
            />
        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_pause_circle_filled_24"
            android:visibility="gone"
            />
        <ImageView
            android:id="@+id/post_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_fast_forward_24"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/info_trace_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scrollable"
        app:layout_constraintBottom_toTopOf="@id/linear_button_2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/reload"
        />
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        app:layout_constraintTop_toBottomOf="@id/linear_button_2"
        >

        <TextView
            android:id="@+id/current_position_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/time_duration_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTime"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/main_menu" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.4" />
    <TextView
        android:id="@+id/error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/error"
        />
</androidx.constraintlayout.widget.ConstraintLayout>